[gd_scene load_steps=2 format=3 uid="uid://3e0gva7f3ej5"]

[ext_resource type="Script" path="res://scenes/ui/options/option_item.gd" id="1_tmrfj"]

[node name="option_item" type="Control"]
modulate = Color(1, 1, 1, 0.6)
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.069
offset_bottom = 0.319996
grow_horizontal = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_tmrfj")

[node name="preference_label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Unknown: ?"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
